# pose_inference

./: CMakeLists.txt  Citation.cff  Readme.md
cfg/: pose_all_config.json  pose_config.scheme.json
cmake/: Config.cmake.in  config.h.in
models/: .gitignore
scripts/: trt.sh
src/: config.h  config_parser.cpp  config_parser.hpp  data.hpp  detection.cpp  detection.hpp  stages.cpp  stages.hpp  utils.cpp  utils.hpp
src/apps/: inference_benchmark.cpp  keypoint_overlay.cpp  video_inference_export.cpp
